# FFmpegC

./: .gitignore  CMakeLists.txt  Compress.c  Compress.h  Log.h  Main.c
